--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
+    "serve": "vuepress dev docs",
+    "build": "vuepress build docs",
     "deploy": "GH=1 yarn docs:build && bash deploy.sh"
   },
   "devDependencies": {
